Print test result when in profile mode